syntax = "proto3";

package pcasaes.bbop.proto;

option java_multiple_files = true;

option optimize_for = LITE_RUNTIME;

message FloatValue {
    float value = 1;
}

message GUID {
    string guid = 1;
}


message PlayerDto {
    GUID playerId = 1;
    int32 ship = 2;
    float x = 3;
    float y = 4;
    float angle = 5;
    bool spawned = 6;
}

// events

message BoltExhaustedEventDto {
    GUID boltId = 1;
    GUID ownerPlayerId = 2;
}

message BoltFiredEventDto {
    GUID boltId = 1;
    GUID ownerPlayerId = 2;
    float x = 3;
    float y = 4;
    float angle = 5;
    int64 startTimestamp = 6;
}

message BoltMovedEventDto {
    GUID boltId = 1;
    GUID ownerPlayerId = 2;
    float x = 3;
    float y = 4;
    float angle = 5;
}

message PlayerDestroyedEventDto {
    GUID playerId = 1;
    GUID destroyedByPlayerId = 2;
}

message PlayerJoinedEventDto {
    GUID playerId = 1;
    int32 ship = 2;
}

message PlayerLeftEventDto {
    GUID playerId = 1;
}

message PlayerMovedEventDto {
    GUID playerId = 1;
    float x = 2;
    float y = 3;
    float angle = 4;
    float thrustAngle = 5;
    int64 timestamp = 6;
}

message PlayerSpawnedEventDto {
    PlayerMovedEventDto location = 1;
}

message PlayerScoreIncreasedEventDto {
    GUID playerId = 1;
    int32 gained = 2;
    int64 timestamp = 3;
}

message PlayerScoreUpdatedEventDto {
    GUID playerId = 1;
    int32 score = 2;
}

message ScoreEntry {
    GUID playerId = 1;
    int32 score = 2;
}

message ScoreBoardUpdatedEventDto {
    repeated ScoreEntry scores = 1;
}


message Event {
    oneof event {
        BoltExhaustedEventDto boltExhausted = 1;
        BoltFiredEventDto boltFired = 2;
        BoltMovedEventDto boltMoved = 3;
        PlayerDestroyedEventDto playerDestroyed = 4;
        PlayerJoinedEventDto playerJoined = 5;
        PlayerLeftEventDto playerLeft = 6;
        PlayerMovedEventDto playerMoved = 7;
        PlayerSpawnedEventDto playerSpawned = 8;
        PlayerScoreIncreasedEventDto playerScoreIncreased = 9;
        PlayerScoreUpdatedEventDto playerScoreUpdated = 10;
        ScoreBoardUpdatedEventDto scoreBoardUpdated = 11;
        Sleep sleep = 12;
    }
}

message Events {
    repeated Event events = 1;
}

// client to server commands

message MoveCommandDto {
    float moveX = 1;
    float moveY = 2;
    FloatValue angle = 3;
    FloatValue thrustAngle = 4;
}

message FireBoltCommandDto {

}

message SpawnCommandDto {

}

message RequestCommand {
    oneof command {
        MoveCommandDto move = 1;
        FireBoltCommandDto fire = 2;
        SpawnCommandDto spawn = 3;
    }
}

// server to client commands

message PlayersListCommandDto {
    repeated PlayerDto players = 1;
}

message PlayerScoreUpdateCommandDto {
    int64 score = 1;
}

message DirectedCommand {
    GUID playerId = 1;
    oneof command {
        PlayersListCommandDto playersList = 2;
        PlayerScoreUpdateCommandDto playerScoreUpdate = 3;
    }
}

// dto

message Sleep {
    int64 sleepUntil = 1;
}

message Dto {
    oneof dto {
        DirectedCommand directedCommand = 1;
        Event event = 2;
        Events events = 3;
        Sleep sleep = 4;
    }
}
